# quant-backtesting-framework

./: .gitignore  .rsyncignore  README.md  WFO_Strategy_Validation_Report.ipynb  pyproject.toml  requirements.txt  wfo_signal_scorer.py
backtrader_framework/: __init__.py
backtrader_framework/analyzers/: __init__.py  risk_metrics.py
backtrader_framework/config/: settings.py
backtrader_framework/data/: candle_store.py  data_feeds.py  duckdb_manager.py  validation.py
backtrader_framework/indicators/: fvg_detector.py  session_tracker.py  sweep_detector.py
backtrader_framework/optimization/: QUANT_ROADMAP.md  __init__.py  bayesian_edge.py  bayesian_tuner.py  cpcv.py  cross_asset_robustness.py  data_fetcher.py  drawdown_analysis.py  hmm_regime.py  indicators.py  market_features.py  meta_strategy_selector.py  param_grid.py  persistence.py  portfolio_optimizer.py  regime.py  shadow_backtest.py  shap_analysis.py  simulator.py  statistics.py  synthetic_scenarios.py  timing_analysis.py  wfo_engine.py
backtrader_framework/runners/: compare_strategies.py  single_backtest.py
backtrader_framework/strategies/: base_strategy.py  fvg_strategy.py  liquidity_raid_strategy.py  momentum_mastery_strategy.py  sbs_strategy.py
backtrader_framework/tests/: test_cpcv.py  test_indicators.py  test_risk_management.py  test_validation.py
dashboard/: .env.example  app.py  config.py  requirements.txt
dashboard/components/: charts.py  (+3 more)
quant_skills/: __init__.py  base.py  edge_existence.py  ergodicity.py  regime_edge.py  signal_decay.py  stationarity.py  strategy_auditor.py  tail_risk.py
(+37 files in other folders)
