[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-backtesting-framework"
version = "1.0.0"
description = "Institutional-grade backtesting, walk-forward optimization, and analytics."
requires-python = ">=3.10"
dependencies = [
    "backtrader>=1.9.78",
    "duckdb>=0.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pytz>=2023.3",
    "requests>=2.31.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "optuna>=3.4.0",
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "shap>=0.43.0",
    "scipy>=1.10.0",
    "streamlit-autorefresh>=1.0.1",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["backtrader_framework*"]
